WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
188357
REGRESSION (
r234330
): 3 legacy-animation-engine/compositing tests are flaky failures
https://bugs.webkit.org/show_bug.cgi?id=188357
Summary
REGRESSION (r234330): 3 legacy-animation-engine/compositing tests are flaky f...
Ryan Haddad
Reported
2018-08-06 13:58:06 PDT
From
https://bugs.webkit.org/show_bug.cgi?id=187866
Truitt Savell 2018-07-30 10:27:14 PDT It looks like there are three tests on High Sierra WK1 that are continuing to fail consistently after
https://trac.webkit.org/changeset/234330/webkit
. The tests are flakey on other WK1 release platforms. Tests: legacy-animation-engine/compositing/backing/transform-transition-from-outside-view.html legacy-animation-engine/compositing/geometry/limit-layer-bounds-opacity-transition.html legacy-animation-engine/compositing/layer-creation/animation-overlap-with-children.html Test History
https://webkit-test-results.webkit.org/dashboards/flakiness_dashboard.html#showAllRuns=true&tests=legacy-animation-engine%2Fcompositing%2Fbacking%2Ftransform-transition-from-outside-view.html%20legacy-animation-engine%2Fcompositing%2Fgeometry%2Flimit-layer-bounds-opacity-transition.html%20legacy-animation-engine%2Fcompositing%2Flayer-creation%2Fanimation-overlap-with-children.html
Text Diffs:
https://build.webkit.org/results/Apple%20High%20Sierra%20Release%20WK1%20(Tests)/r234363%20(7001)/legacy-animation-engine/compositing/backing/transform-transition-from-outside-view-diff.txt
https://build.webkit.org/results/Apple%20High%20Sierra%20Release%20WK1%20(Tests)/r234363%20(7001)/legacy-animation-engine/compositing/geometry/limit-layer-bounds-opacity-transition-diff.txt
https://build.webkit.org/results/Apple%20High%20Sierra%20Release%20WK1%20(Tests)/r234363%20(7001)/legacy-animation-engine/compositing/layer-creation/animation-overlap-with-children-diff.txt
Attachments
Repro Test List
(63.52 KB, text/plain)
2018-08-07 11:15 PDT
,
Truitt Savell
no flags
Details
Patch
(7.19 KB, patch)
2019-04-25 16:20 PDT
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2018-08-06 14:02:47 PDT
I reproduces two flakes and am fixing in
bug 188356
, but I could not reproduce all of these.
Radar WebKit Bug Importer
Comment 2
2018-08-06 16:42:06 PDT
<
rdar://problem/42986633
>
Simon Fraser (smfr)
Comment 3
2018-08-06 17:17:13 PDT
I can only reproduce flakiness with: legacy-animation-engine/animations/needs-layout.html failed unexpectedly (reference mismatch) legacy-animation-engine/animations/trigger-container-scroll-empty.html failed unexpectedly (text diff)
Truitt Savell
Comment 4
2018-08-07 11:15:06 PDT
Created
attachment 346717
[details]
Repro Test List Here is a reliable repro of the Three tests that are failing. A state is being set and this list order reliably reproduces the failure. I ran this list of tests using: run-webkit-tests --test-list DIRECTORY_OF_TEST_LIST_FILE --child-processes 1 -1 I am going to try and bisect the list and see if I can get a better idea of what's causing this.
Truitt Savell
Comment 5
2018-08-07 11:42:46 PDT
These tests are causing the failures: js/slow-stress/Int32Array-alloc-large-long-lived.html js/slow-stress/Int32Array-alloc-huge.html js/slow-stress/Int32Array-alloc-huge-long-lived.html legacy-animation-engine/compositing/backing/transform-transition-from-outside-view.html legacy-animation-engine/compositing/geometry/limit-layer-bounds-opacity-transition.html legacy-animation-engine/compositing/layer-creation/animation-overlap-with-children.html Running these tests together causes the legacy-animation tests to fail. The js/ tests can be ran in any order but all three of them together cause the state that is making the three legacy tests fail.
Simon Fraser (smfr)
Comment 6
2018-08-07 11:46:22 PDT
It looks like the legacy-animation-engine/compositing test are responding to memory pressure, but DRT is supposed to override the compositing policy option. That must be broken somehow.
Simon Fraser (smfr)
Comment 7
2018-08-08 17:34:51 PDT
The bug here is that the Internals code to reset state between tests clears the compositing policy override, allowing a test to fall into low memory mode. In WTR, we explicitly set the override to "Normal", but there is no such code in DRT.
Truitt Savell
Comment 8
2018-08-09 16:31:32 PDT
Marking these three tests flakey in
https://trac.webkit.org/changeset/234742/webkit
doing this to clear noise on the tree while a solution is found.
Simon Fraser (smfr)
Comment 9
2019-04-25 16:20:20 PDT
Created
attachment 368284
[details]
Patch
WebKit Commit Bot
Comment 10
2019-04-25 19:55:43 PDT
Comment on
attachment 368284
[details]
Patch Clearing flags on attachment: 368284 Committed
r244675
: <
https://trac.webkit.org/changeset/244675
>
WebKit Commit Bot
Comment 11
2019-04-25 19:55:44 PDT
All reviewed patches have been landed. Closing bug.
Alexey Proskuryakov
Comment 12
2019-05-11 15:59:16 PDT
***
Bug 188421
has been marked as a duplicate of this bug. ***
Alexey Proskuryakov
Comment 13
2019-05-11 16:03:15 PDT
***
Bug 188910
has been marked as a duplicate of this bug. ***
Alexey Proskuryakov
Comment 14
2019-05-11 16:14:58 PDT
This patch fixed two of these tests, and it also fixed other tests that I just duped here. legacy-animation-engine/compositing/backing/transform-transition-from-outside-view.html remains super flaky. Turns out that we already have a separate bug for it,
bug 184611
, but failures are not as before. Updated test results in
http://trac.webkit.org/r245211
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug