REGRESSION (r234330): 3 legacy-animation-engine/compositing tests are flaky failures https://bugs.webkit.org/show_bug.cgi?id=188357 <rdar://problem/42986633>

Reviewed by Dean Jackson.
Source/WebCore:

DumpRenderTree had no code that set page.setCompositingPolicyOverride() to Normal, so some
tests would fall into low memory mode and have different behavior.

Fix by moving the code that calls setCompositingPolicyOverride(Normal) from the WK2 layer
to Internals, so it's shared by DRT and WTR.

We no longer need the WK2 C SPI glue.

* testing/Internals.cpp:
(WebCore::Internals::resetToConsistentState):

Source/WebKit:

DumpRenderTree had no code that set page.setCompositingPolicyOverride() to Normal, so some
tests would fall into low memory mode and have different behavior.

Fix by moving the code that calls setCompositingPolicyOverride(Normal) from the WK2 layer
to Internals, so it's shared by DRT and WTR.

We no longer need the WK2 C SPI glue.

* WebProcess/InjectedBundle/API/c/WKBundlePage.cpp:
(WKBundlePageSetEventThrottlingBehaviorOverride):
(WKBundlePageSetCompositingPolicyOverride): Deleted.
* WebProcess/InjectedBundle/API/c/WKBundlePagePrivate.h:

Tools:

DumpRenderTree had no code that set page.setCompositingPolicyOverride() to Normal, so some
tests would fall into low memory mode and have different behavior.

Fix by moving the code that calls setCompositingPolicyOverride(Normal) from the WK2 layer
to Internals, so it's shared by DRT and WTR.

We no longer need the WK2 C SPI glue.

* WebKitTestRunner/InjectedBundle/InjectedBundlePage.cpp:
(WTR::InjectedBundlePage::prepare):


Canonical link: https://commits.webkit.org/211515@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@244675 268f45cc-cd09-0410-ab3c-d52691b4dbfc